@@ -72,6 +72,7 @@ public class TestBadRecords extends ClusterMapReduceTestCase {
     conf.setNumMapTasks(1);
     conf.setNumReduceTasks(1);
     conf.setInt("mapred.task.timeout", 30*1000);
+    SkipBadRecords.setEnabled(conf, true);
     
     SkipBadRecords.setAttemptsToStartSkipping(conf,0);
     //the no of attempts to successfully complete the task depends 
