@@ -440,6 +440,9 @@ Trunk (unreleased changes)
     HADOOP-3910. Remove unused ClusterTestDFSNamespaceLogging and
     ClusterTestDFS. (Tsz Wo (Nicholas), SZE via cdouglas)
 
+    HADOOP-3954. Disable record skipping by default. (Sharad Agarwal via
+    cdouglas)
+
 Release 0.18.1 - Unreleased
 
   BUG FIXES
